--- a/src/styles/Header.css
+++ b/src/styles/Header.css
@@ -1,13 +1,13 @@
 @import url('https://fonts.googleapis.com/css2?family=Inter:wght@100..400&display=swap');
 
-:root{
+:root {
     --color-neutral-0: #0e0c0c;
     --color-neutral-10: #171717;
     --color-neutral-30: #a8a29e;
     --color-neutral-40: #f5f5f5;
 }
 
-header{
+header {
     font-family: 'Inter', sans-serif;
     margin: 0;
     padding: 0;
@@ -31,6 +31,28 @@ header{
     background-color: var(--color-neutral-10);
 }
 
+.navLink {
+    display: flex;
+    align-items: center;
+    list-style: none;
+    padding: 1.5rem;
+    margin: 0;
+    flex: 1; /* Para ocupar o espaço disponível */
+}
+
+.nav-item {
+    margin-right: 1rem; /* Espaçamento entre os itens */
+}
+
+.nav-link {
+    text-decoration: none;
+    color: var(--color-neutral-30);
+}
+
+.nav-link:hover {
+    color: white; /* Cor ao passar o mouse por cima */
+}
+
 .navbar-buttons {
     display: flex;
     align-items: center;
@@ -41,16 +63,19 @@ header{
     text-decoration: none;
     padding: 0.5rem 1rem;
     color: #fff;
-    background-color: #6c757d;
     border: none;
     border-radius: 0.25rem;
     cursor: pointer;
 }
 
-.btn:hover {
+.btnHeader {
+    background-color: #6c757d;
+}
+
+.btnHeader:hover {
     background-color: #5a6268;
 }
 
 .icon-login {
-    margin-right: 0.75rem; /* Adjust the value as needed */
+    margin-right: 0.75rem; /* Ajuste conforme necessário */
 }
